Allow scrolling around Descriptions and Nomenclatures.

--- a/django/templates/about.html
+++ b/django/templates/about.html
@@ -170,6 +170,10 @@
             {% endif %}
         </div>
 
+        <p><small>Our favicon is adapted from <a href="https://www.flaticon.com/free-icons/taxonomy"
+             title="taxonomy icons">Taxonomy icons created by RanuKumbolo.lab - Flaticon</a>
+            </small>
+        </p>
         <h1>About SKOL</h1>
         <p class="subtitle">Synoptic Key of Life &mdash; Semantic Search for Mycological Taxonomy</p>
 
