--- a/django/templates/sources.html
+++ b/django/templates/sources.html
@@ -233,7 +233,7 @@
             {% if user.is_authenticated %}
             <a href="{% url 'accounts:logout' %}">Logout</a>
             {% else %}
-            <a href="{% url 'accounts:login' %}">Login</a>
+            <a href="{% url 'accounts:login' %}?next={{ request.path }}">Login</a>
             {% endif %}
         </div>
 
